menu color for mobile
using css change to white from black

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ a {
     text-decoration: none; }
 
 .text-black {
-  color: #000 !important; }
+  color: #ffffff !important; }
 
 .bg-black {
   background: #000 !important; }
