--- a/devansh/portfolio.css
+++ b/devansh/portfolio.css
@@ -56,7 +56,7 @@ body {
 .hbox {
   font-size: 50px;
   font-weight: 600;
-  font-family: 'Open Sans', 'Roboto', sans-serif;
+  font-family: "Open Sans", "Roboto", sans-serif;
 }
 
 nav a {
@@ -91,11 +91,18 @@ nav {
   font-size: 40px;
 }
 .span-2 {
-  font-size: 50px;
+  font-size: 35px;
   color: aqua;
   font-weight: 500;
-  font-family: 'Lexended Giga', sans-serif;
+  font-family: "Lexended Giga", sans-serif;
   text-shadow: 2px 2px 4px aqua;
+}
+.span-4 {
+  font-size: 50px;
+  color: white;
+  font-weight: 500;
+  font-family: "encode sans semi expanded", sans-serif;
+  letter-spacing: 7px;
 }
 .span-3 {
   color: aqua;
@@ -109,7 +116,7 @@ nav {
 
 .intro {
   font-size: 25px;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .mbox {
@@ -139,7 +146,7 @@ nav {
 .grid-container {
   padding-left: 165px;
   padding-right: 165px;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .grid-subcontainer {
@@ -158,7 +165,7 @@ nav {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   border: 1px solid white;
   border-radius: 30px;
 }
@@ -172,7 +179,7 @@ nav {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   border: 1px solid white;
   border-radius: 30px;
 }
@@ -186,7 +193,7 @@ nav {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   border: 1px solid white;
   border-radius: 30px;
 }
@@ -252,10 +259,10 @@ img {
 .mid {
   text-align: center;
   background-color: #ffffff11;
-  padding: 40px;
+  padding: 30px;
   margin-top: 100px;
   margin-bottom: 0px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 @media (max-width: 600px) {
@@ -294,18 +301,24 @@ img {
   }
 
   .intro {
-    font-size: 1.2rem;
+    font-size: 0.8rem;
   }
 
   .span-1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
   .span-2 {
-    font-size: 2.5rem;
+    font-size: 1.6rem;
+  }
+  .span-4 {
+    font-size: 0.7rem;
   }
   footer {
     padding: 10px;
     font-size: 17px;
+  }
+  .mid {
+    font-size: 15px;
   }
 }
 
