--- a/css/style.css
+++ b/css/style.css
@@ -1646,7 +1646,7 @@ a:hover {
   /* filter: url(filters.svg#grayscale); Firefox 3.5+ */
   filter: gray;
   /* IE5+ */
-  -webkit-filter: grayscale(1);
+  /* -webkit-filter: grayscale(1); */
   /* Webkit Nightlies & Chrome Canary */
   -webkit-transition: all 0.1s ease-in-out;
 }
